--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -40,14 +40,14 @@ Chat
                         </div>
                         <div id="chat-div-chat">
                             <div id="chat-div-messages">
-                                <nav id="chat-div-messages-navbar" class="">
+                                <nav id="chat-div-messages-navbar">
                                     <div class="row p-2">
                                         <div class="d-flex align-items-center col-1">
                                             <a id="chat-title-with-who" href="#"></a>
                                         </div>
                                         <div class="toogle-options row col-11">
                                             <div id="toggler-content-chat"
-                                                class="toggler-content col-4">
+                                                class="toggler-content col-8 col-sm-7 col-md-6 col-lg-5 col-xl-4">
                                                 <!-- <a class="nav-item nav-link active" href="#">Search users<span class="sr-only">(current)</span></a> -->
                                                 <div class="div-input-search">
                                                     <input id="input-search-users" class="input-form" type="search"
@@ -68,16 +68,17 @@ Chat
                                 <div id="chat-div-messages-inside">
 
                                 </div>
-                                <div id="chat-div-submit" class="row input-group mb-3 p-0 m-0">
-                                    <div class="col-11 p-0 m-0">
-                                        <input id="input-message" type="text" class="form-control"
-                                            placeholder="Enter your message" aria-label="Username"
-                                            aria-describedby="basic-addon1">
-                                    </div>
-                                    <div class="input-group-prepend col-1 p-0 m-0">
-                                        <button id="btn-submit-msg" class="btn btn-control">
-                                            <img src="https://img.icons8.com/nolan/64/filled-sent.png" />
-                                        </button>
+                                <div id="chat-div-submit" class="mb-3">
+                                    <div class="row">
+                                        <div class="col-10 ">
+                                            <input id="input-message" type="text" class="input"
+                                                placeholder="Enter your message">
+                                        </div>
+                                        <div id="chat-div-submit-btn" class="col-2">
+                                            <button id="btn-submit-msg">
+                                                <img />
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
