--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -69,17 +69,20 @@ Chat
 
                                 </div>
                                 <div id="chat-div-submit" class="mb-3">
-                                    <div class="row">
-                                        <div class="col-10 ">
-                                            <input id="input-message" type="text" class="input"
-                                                placeholder="Enter your message">
-                                        </div>
-                                        <div id="chat-div-submit-btn" class="col-2">
-                                            <button id="btn-submit-msg">
-                                                <img />
-                                            </button>
-                                        </div>
-                                    </div>
+                                    <!-- <div class="row"> -->
+                                    <!-- <div class="col-10 "> -->
+                                    <input id="input-message" type="text" class="input"
+                                        placeholder="Enter your message">
+                                    <!-- </div> -->
+                                    <!-- <div id="chat-div-submit-btn" class="col-2"> -->
+                                    <!-- <div id="div-btn-submit-msg"> -->
+                                    <button id="btn-submit-msg">
+                                        <img />
+                                    </button>
+                                    <!-- </div> -->
+
+                                    <!-- </div> -->
+                                    <!-- </div> -->
                                 </div>
                             </div>
                         </div>
